@@ -93,6 +93,7 @@ public class OAuth2ClientControllerTest extends OAuth2TestBase {
         assertEquals("non super confidential client",
                 clientInfo.at("/name").asText());
         assertNotNull(clientInfo.at("/url"));
+        assertNotNull(clientInfo.at("/redirect_uri"));
         assertEquals(false, clientInfo.at("/is_super").asBoolean());
         assertEquals("CONFIDENTIAL", clientInfo.at("/type").asText());
 
@@ -102,6 +103,7 @@ public class OAuth2ClientControllerTest extends OAuth2TestBase {
         assertEquals("super confidential client",
                 clientInfo.at("/name").asText());
         assertNotNull(clientInfo.at("/url"));
+        assertNotNull(clientInfo.at("/redirect_uri"));
         assertEquals("CONFIDENTIAL", clientInfo.at("/type").asText());
         assertTrue(clientInfo.at("/is_super").asBoolean());
     }
@@ -118,7 +120,8 @@ public class OAuth2ClientControllerTest extends OAuth2TestBase {
         assertNotNull(clientSecret);
 
         assertFalse(clientId.contains("a"));
-
+        
+        testConfidentialClientInfo(clientId, username);
         testResetConfidentialClientSecret(clientId, clientSecret);
         deregisterConfidentialClient(username, clientId);
     }
