@@ -1,6 +1,9 @@
 # version 0.66
 
+2022-03-31
  - Updated query and user-group name pattern.
+ 2022-04-08
+ - Added redirect_uri to client info API.
 
 # version 0.65.2
 
